@@ -244,6 +244,9 @@ $_prefs['default_tasklist'] = array(
         $ui->prefs['default_tasklist']['enum'] = $enum;
     },
     'on_change' => function() {
+        $GLOBALS['injector']->getInstance('Nag_Factory_Tasklists')
+            ->create()
+            ->setDefaultShare($GLOBALS['prefs']->getValue('default_tasklist'));
         $sync = @unserialize($GLOBALS['prefs']->getValue('sync_lists'));
         $haveDefault = false;
         $default = Nag::getDefaultTasklist(Horde_Perms::EDIT);
