@@ -11,6 +11,27 @@
 class Nag_Tasklists_Kolab extends Nag_Tasklists_Base
 {
     /**
+     * Runs any actions after setting a new default tasklist.
+     *
+     * @param string $share  The default share ID.
+     */
+    public function setDefaultShare($share)
+    {
+           $tasklists = $this->_shares
+               ->listShares(
+                   $this->_user,
+                   array('perm' => Horde_Perms::SHOW,
+                         'attributes' => $this->_user));
+           foreach ($tasklists as $id => $tasklist) {
+               if ($id == $share) {
+                   $tasklist->set('default', true);
+                   $tasklist->save();
+                   break;
+               }
+           }
+    }
+
+    /**
      * Return the name of the default share.
      *
      * @return string The name of a default share.
