@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Mark Kolab folder as default when changing default task list preference.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1261,7 +1261,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Mark Kolab folder as default when changing default task list preference.
    </notes>
   </release>
  </changelog>
